<resources>
    <string name="app_name">WeatherApplication</string>
    <string name="strweatherapikey">ebfcac32bda131ed5a160f2757938396</string>
    <string name="strSampleTemp">36°</string>
    <string name="strSampleDay">Thursday</string>
    <string name="strSampleWind">Wind : 24m/s</string>
    <string name="strSampleHumidity">Humidity : 23%</string>
    <string name="strWind">Wind</string>
    <string name="strHumidity">Humidity</string>
    <string name="weatherapikey">ebfcac32bda131ed5a160f2757938396</string>
    <string name="strCondition">Cloudy</string>
    <string name="strSamplePressure">Pressure : 1011 hPa</string>
    <string name="buttonWeather">Get Details</string>
</resources>
