<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:padding="@dimen/activity_horizontal_margin">
    <TextView
        android:id="@+id/txtForecastTemperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/strSampleTemp"
        android:layout_weight="0.7"
        android:textSize="64sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.3">
        <TextView
            android:id="@+id/txtForecastCondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold|italic"
            android:textAllCaps="true"
            android:text="@string/strCondition"
            android:layout_weight="1"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/txtForecastWind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic"
            android:text="@string/strSampleWind"
            android:layout_weight="1"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/txtForecastHumidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic"
            android:text="@string/strSampleHumidity"
            android:layout_weight="1"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/txtForecastPressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic"
            android:text="@string/strSamplePressure"
            android:layout_weight="1"
            android:textSize="16sp"
            />
    </LinearLayout>

</LinearLayout>