<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="dinchi.org.weatherapplication.MainScreenActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <AutoCompleteTextView
            android:id="@+id/tvcities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnGetWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/buttonWeather"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
            android:id="@+id/txtTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strSampleTemp"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:textSize="64sp"/>
        <TextView
            android:id="@+id/txtCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strCondition"
            android:textStyle="bold|italic"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_alignRight="@id/txtTemperature"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/txtWindReading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strSampleWind"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold|italic"
            android:layout_below="@id/txtTemperature"/>

        <TextView
            android:id="@+id/txtHumidityReading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strSampleHumidity"
            android:textSize="16sp"
            android:layout_below="@id/txtTemperature"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold|italic"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/weatherforecast">
    </include>
</LinearLayout>
